update : warning solved

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ameen-k-nejeeb.github.io/portfolio/",
+  "homepage": "https://ameen-k-nejeeb.github.io/portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
